fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1056,6 +1056,10 @@ input, select, textarea {
 			height: 100%;
 			margin: 0;
 			padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			min-height: 100vh;
 			/* overflow-x: hidden; */
 		}
 			.row {
